--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/sy1?serverTimezone=UTC&characterEncoding=utf8&useUniCode=true&useSSL=false
+spring.datasource.url=jdbc:mysql://49.235.16.187:3306/gulimail_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=lxz13587847288
+spring.datasource.password=123456
+server.port=10000
